--- a/app/transform/templates/upload/upload_complete.html
+++ b/app/transform/templates/upload/upload_complete.html
@@ -2,26 +2,30 @@
 
 {% block content %}
 <div class="container-fluid bg-dark">
-    <center><h3><p class="text-white">Download File!</p></h3></center>
-    <br>
-    <img src="{{ url_for('static', filename = 'img/excel.png') }}", width="100" 
-        style="margin-left: auto; margin-right: auto; display: block;")/>
-
-    <div class="container">
-        <div class="text-left mx-auto w-25">
-            <h1></h1>
-            <br><br>
-            {% if 'Domestic' in server_list %}
-            <h5><a href="{{ url_for('download', filename = domestic_path) }}" class="badge badge-light" download="국내서버업로드용.xlsx">국내서버업로드용.xlsx</a></h5>
-            {% endif %}
-            {% if 'SouthEastAsia' in server_list %}
-            <h5><a href="{{ url_for('download', filename = sea_path) }}" class="badge badge-light" download="동남아서버업로드용.xlsx">동남아서버업로드용.xlsx</a></h5>
-            {% endif %}
-            {% if 'China' in server_list %}
-            <h5><a href="{{ url_for('download', filename = china_path) }}" class="badge badge-light" download="중국(위챗)서버업로드용.xlsx">중국(위챗)서버업로드용.xlsx</a></h5>
-            {% endif %}
+    <div class="row">
+        <div class="col"></div>
+        <div class="col align-self-center" style="padding: 10% 0px 22% 0px;">
+            <center><h3><p class="text-white">Download File!</p></h3></center>
+            <br>
+            <img src="{{ url_for('static', filename = 'img/excel.png') }}", width="100" 
+                style="margin-left: auto; margin-right: auto; display: block;")/>
+            <center>
+                <div class="text-left mx-auto w-25">
+                    <h1></h1>
+                    <br><br>
+                    {% if 'Domestic' in server_list %}
+                    <h5><a href="{{ url_for('download', filename = domestic_path) }}" class="badge badge-light" download="국내서버업로드용.xlsx">국내서버업로드용.xlsx</a></h5>
+                    {% endif %}
+                    {% if 'SouthEastAsia' in server_list %}
+                    <h5><a href="{{ url_for('download', filename = sea_path) }}" class="badge badge-light" download="동남아서버업로드용.xlsx">동남아서버업로드용.xlsx</a></h5>
+                    {% endif %}
+                    {% if 'China' in server_list %}
+                    <h5><a href="{{ url_for('download', filename = china_path) }}" class="badge badge-light" download="중국(위챗)서버업로드용.xlsx">중국(위챗)서버업로드용.xlsx</a></h5>
+                    {% endif %}
+                </div>
+            </center>
         </div>
-    <br>
+        <div class="col"></div>
     </div>
-    </div>
+</div>
 {% endblock %}
